# t0-gpu

./: .gitignore  Cargo.toml  DONATE.md  LICENSE-APACHE  LICENSE-MIT  README.md  test_kcp.s
.archive/: gpu_printf.rs  math.rs.bak  profile_guided.rs
benchmarks/: bench_triton_rocblas.py  gen_torch_ref.py  profile_gemm.py  triton_rocblas_results.csv
docs/: Autotuner_VA回收根因修复_实验记录.md  CSE_Barrier_Aware正确性修复_实验记录.md  Coalesced_Group_宽寄存器保护_实验记录.md  GEMM_自动选择与边界保护优化_实验记录.md  GEMM系统性优化_实验记录.md  GPU_BufferPool_LRU缓存_实验记录.md  GPU硬挂修复_LICM死代码_实验记录.md  GPU连续运行硬挂防御_实验记录.md  Ignis_v2_架构设计.md  Ignis_vs_PyTorch_差距分析.md  SSA_MemoryOps系统修复_实验记录.md  SSA_Pipeline_RootCause调查_实验记录.md  SSA_RegAlloc碎片化调查_实验记录.md  SSA_Regalloc_Liveness修复_实验记录.md  SSA_VReg自更新Bug修复_实验记录.md  T0_Ignis_完整度审计与路线图.md  T0_SSA_Pipeline稳定化_工作总结_2026-03-25-26.md  T0_SSA_Safety_Guide.md  T0_vs_Triton_rocBLAS_统一基准测试.md  T0_vs_Triton_深度对比.md  T0_开发日志.md  T0_技术手册.md  T0_新旧替代关系审计.md  T0_编译器健康检查报告.md  T0_编译器全脉络审计.md  Triton_rocBLAS_抓包分析_2026-03-27.md  WGP_Mode_Page_Fault_根因分析.md  WGP_Mode_RSRC1_CWSR根因分析.md  WGP_Mode_k32_实验记录.md  architecture.md  blog_beating_rocblas.md  blog_beating_rocblas_cn.md  blog_从零到79TFLOPS.md  gfx1100_notes.md  k48_hang根因_coopload_bug.md  split_k_GPU_Hang_根因分析.md  t0_ignis_status.md  t0_vs_triton_gap_analysis.md  tile_ir_GPU_Hang_RootCause.md  tile_ir_KLoop_GMEM_LDS回归修复_实验记录.md  (+8 more)
examples/: README.md  analyze_gemm_isa.rs  bench_128x4096.rs  bench_auto_select.rs  bench_block_dsl_gemm.rs  bench_gemm.rs  bench_gemm_sweep.rs  bench_gemm_variants.rs  bench_kfd_dispatch.rs  bench_small_matrix.rs  (+14 more)
(+79 files in other folders)
